# setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = lib_utils
author = Justin Furuness, Tony Zheng
author_email = jfuruness@gmail.com
description = Useful functions used across modules
version = 0.2.2
url = https://github.com/jfuruness/lib_utils.git

keywords = 
    utils
    BGP

classifiers = 
    Programming Language :: Python :: 3
    Environment :: Console
    Intended Audience :: Developers

license = BSD
license_files = LICENSE

platforms = unix, linux

long_description = README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
# Mypy won't work if this is True
zip_safe = False
# Include extras in Manfest.in
include_package_data = True
install_requires = 
    beautifulsoup4
    multiprocessing_logging
    pathos
    requests
    tqdm
    urllib3

description-file = README.md

# https://stackoverflow.com/a/30539963/8903959
[options.extras_require]
test = 
    beautifulsoup4==4.10.0
    multiprocessing_logging==0.3.1
    pathos==0.2.8
    requests==2.25.1
    tqdm==4.62.3
    urllib3==1.26.5
    pytest==6.2.5
    pytest-cov
    types-requests
    mypy
    flake8
    tox

[options.package_data]
lib_utils = py.typed

[flake8]
max-line-length = 79

[coverage:run]
branch = True
omit = 
    *tests*
    *__init__*

[coverage:report]

show_missing = True

exclude_lines =
    # Excludes lines overrides pragma: no cover, so add it back
    pragma: no cover

    # Code below this is not meant to be tested
    raise NotImplementedError

    # Code that isn't meant to be run
    if __name__ == .__main__.:
